--- a/src/pages/equipments/equipments.html
+++ b/src/pages/equipments/equipments.html
@@ -20,17 +20,17 @@
     <ion-item-sliding>
       <ion-item item-left color="none" id="equipments-item-left_hand">
         Left Hand
-        <p>{{getEquipmentName("left_hand")}}</p>
+        <p>{{names.left_hand}}</p>
         <ion-note item-right>Swipe left</ion-note>
       </ion-item>
       <ion-item-options side="right">
-        <button *ngIf='getEquipmentName("left_hand")=="Empty"' ion-button color="secondary" on-click="equipEquipment('left_hand')">
+        <button *ngIf='names.left_hand=="Empty"' ion-button color="secondary" on-click="equipEquipment('left_hand')">
           Equip
         </button>
-        <button *ngIf='getEquipmentName("left_hand")!="Empty"' ion-button color="primary" on-click="changeEquipment('left_hand')">
+        <button *ngIf='names.left_hand!="Empty"' ion-button color="primary" on-click="changeEquipment('left_hand')">
           Change
         </button>
-        <button *ngIf='getEquipmentName("left_hand")!="Empty"' ion-button color="danger" on-click="removeEquipment('left_hand')">
+        <button *ngIf='names.left_hand!="Empty"' ion-button color="danger" on-click="removeEquipment('left_hand')">
           Remove
         </button>
       </ion-item-options>
@@ -38,17 +38,17 @@
     <ion-item-sliding>
       <ion-item item-left color="none" id="equipments-item-right_hand">
         Right Hand
-        <p>{{getEquipmentName("right_hand")}}</p>
+        <p>{{names.right_hand}}</p>
         <ion-note item-right>Swipe left</ion-note>
       </ion-item>
       <ion-item-options side="right">
-        <button *ngIf='getEquipmentName("right_hand")=="Empty"' ion-button color="secondary" on-click="equipEquipment('right_hand')">
+        <button *ngIf='names.right_hand=="Empty"' ion-button color="secondary" on-click="equipEquipment('right_hand')">
           Equip
         </button>
-        <button *ngIf='getEquipmentName("right_hand")!="Empty"' ion-button color="primary" on-click="changeEquipment('right_hand')">
+        <button *ngIf='names.right_hand!="Empty"' ion-button color="primary" on-click="changeEquipment('right_hand')">
           Change
         </button>
-        <button *ngIf='getEquipmentName("right_hand")!="Empty"' ion-button color="danger" on-click="removeEquipment('right_hand')">
+        <button *ngIf='names.right_hand!="Empty"' ion-button color="danger" on-click="removeEquipment('right_hand')">
           Remove
         </button>
       </ion-item-options>
@@ -56,17 +56,17 @@
     <ion-item-sliding>
       <ion-item item-left color="none" id="equipments-item-head">
         Head
-        <p>{{getEquipmentName("head")}}</p>
+        <p>{{names.head}}</p>
         <ion-note item-right>Swipe left</ion-note>
       </ion-item>
       <ion-item-options side="right">
-        <button *ngIf='getEquipmentName("head")=="Empty"' ion-button color="secondary" on-click="equipEquipment('head')">
+        <button *ngIf='names.head=="Empty"' ion-button color="secondary" on-click="equipEquipment('head')">
           Equip
         </button>
-        <button *ngIf='getEquipmentName("head")!="Empty"' ion-button color="primary" on-click="changeEquipment('head')">
+        <button *ngIf='names.head!="Empty"' ion-button color="primary" on-click="changeEquipment('head')">
           Change
         </button>
-        <button *ngIf='getEquipmentName("head")!="Empty"' ion-button color="danger" on-click="removeEquipment('head')">
+        <button *ngIf='names.head!="Empty"' ion-button color="danger" on-click="removeEquipment('head')">
           Remove
         </button>
       </ion-item-options>
@@ -74,17 +74,17 @@
     <ion-item-sliding>
       <ion-item item-left color="none" id="equipments-item-torax">
         Torax
-        <p>{{getEquipmentName("torax")}}</p>
+        <p>{{names.torax}}</p>
         <ion-note item-right>Swipe left</ion-note>
       </ion-item>
       <ion-item-options side="right">
-        <button *ngIf='getEquipmentName("torax")=="Empty"' ion-button color="secondary" on-click="equipEquipment('torax')">
+        <button *ngIf='names.torax=="Empty"' ion-button color="secondary" on-click="equipEquipment('torax')">
           Equip
         </button>
-        <button *ngIf='getEquipmentName("torax")!="Empty"' ion-button color="primary" on-click="changeEquipment('torax')">
+        <button *ngIf='names.torax!="Empty"' ion-button color="primary" on-click="changeEquipment('torax')">
           Change
         </button>
-        <button *ngIf='getEquipmentName("torax")!="Empty"' ion-button color="danger" on-click="removeEquipment('torax')">
+        <button *ngIf='names.torax!="Empty"' ion-button color="danger" on-click="removeEquipment('torax')">
           Remove
         </button>
       </ion-item-options>
@@ -92,17 +92,17 @@
     <ion-item-sliding>
       <ion-item item-left color="none" id="equipments-item-legs">
         Legs
-        <p>{{getEquipmentName("legs")}}</p>
+        <p>{{names.legs}}</p>
         <ion-note item-right>Swipe left</ion-note>
       </ion-item>
       <ion-item-options side="right">
-        <button *ngIf='getEquipmentName("legs")=="Empty"' ion-button color="secondary" on-click="equipEquipment('legs')">
+        <button *ngIf='names.legs=="Empty"' ion-button color="secondary" on-click="equipEquipment('legs')">
           Equip
         </button>
-        <button *ngIf='getEquipmentName("legs")!="Empty"' ion-button color="primary" on-click="changeEquipment('legs')">
+        <button *ngIf='names.legs!="Empty"' ion-button color="primary" on-click="changeEquipment('legs')">
           Change
         </button>
-        <button *ngIf='getEquipmentName("legs")!="Empty"' ion-button color="danger" on-click="removeEquipment('legs')">
+        <button *ngIf='names.legs!="Empty"' ion-button color="danger" on-click="removeEquipment('legs')">
           Remove
         </button>
       </ion-item-options>
@@ -110,17 +110,17 @@
     <ion-item-sliding>
       <ion-item item-left color="none" id="equipments-item-feet">
         Foot
-        <p>{{getEquipmentName("feet")}}</p>
+        <p>{{names.feet}}</p>
         <ion-note item-right>Swipe left</ion-note>
       </ion-item>
       <ion-item-options side="right">
-        <button *ngIf='getEquipmentName("feet")=="Empty"' ion-button color="secondary" on-click="equipEquipment('feet')">
+        <button *ngIf='names.feet=="Empty"' ion-button color="secondary" on-click="equipEquipment('feet')">
           Equip
         </button>
-        <button *ngIf='getEquipmentName("feet")!="Empty"' ion-button color="primary" on-click="changeEquipment('feet')">
+        <button *ngIf='names.feet!="Empty"' ion-button color="primary" on-click="changeEquipment('feet')">
           Change
         </button>
-        <button *ngIf='getEquipmentName("feet")!="Empty"' ion-button color="danger" on-click="removeEquipment('feet')">
+        <button *ngIf='names.feet!="Empty"' ion-button color="danger" on-click="removeEquipment('feet')">
           Remove
         </button>
       </ion-item-options>
@@ -128,17 +128,17 @@
     <ion-item-sliding>
       <ion-item item-left color="none" id="equipments-item-arms">
         Arms
-        <p>{{getEquipmentName("arms")}}</p>
+        <p>{{names.arms}}</p>
         <ion-note item-right>Swipe left</ion-note>
       </ion-item>
       <ion-item-options side="right">
-        <button *ngIf='getEquipmentName("arms")=="Empty"' ion-button color="secondary" on-click="equipEquipment('arms')">
+        <button *ngIf='names.arms=="Empty"' ion-button color="secondary" on-click="equipEquipment('arms')">
           Equip
         </button>
-        <button *ngIf='getEquipmentName("arms")!="Empty"' ion-button color="primary" on-click="changeEquipment('arms')">
+        <button *ngIf='names.arms!="Empty"' ion-button color="primary" on-click="changeEquipment('arms')">
           Change
         </button>
-        <button *ngIf='getEquipmentName("arms")!="Empty"' ion-button color="danger" on-click="removeEquipment('arms')">
+        <button *ngIf='names.arms!="Empty"' ion-button color="danger" on-click="removeEquipment('arms')">
           Remove
         </button>
       </ion-item-options>
@@ -146,17 +146,17 @@
     <ion-item-sliding>
       <ion-item item-left color="none" id="equipments-item-hands">
         Hands
-        <p>{{getEquipmentName("hands")}}</p>
+        <p>{{names.hands}}</p>
         <ion-note item-right>Swipe left</ion-note>
       </ion-item>
       <ion-item-options side="right">
-        <button *ngIf='getEquipmentName("hands")=="Empty"' ion-button color="secondary" on-click="equipEquipment('hands')">
+        <button *ngIf='names.hands=="Empty"' ion-button color="secondary" on-click="equipEquipment('hands')">
           Equip
         </button>
-        <button *ngIf='getEquipmentName("hands")!="Empty"' ion-button color="primary" on-click="changeEquipment('hands')">
+        <button *ngIf='names.hands!="Empty"' ion-button color="primary" on-click="changeEquipment('hands')">
           Change
         </button>
-        <button *ngIf='getEquipmentName("hands")!="Empty"' ion-button color="danger" on-click="removeEquipment('hands')">
+        <button *ngIf='names.hands!="Empty"' ion-button color="danger" on-click="removeEquipment('hands')">
           Remove
         </button>
       </ion-item-options>
