--- a/src/pages/tests/tests.html
+++ b/src/pages/tests/tests.html
@@ -56,40 +56,40 @@
   </ion-list>
   <!-- Status tests -->
   <ion-list text-center>
-    <button id="tests-strenght" ion-button color="primary" on-click="strenghtTest()">
+    <button id="tests-strenght" ion-button color="primary" on-click="openTestModel('strenght')">
       ST
     </button>
-    <button id="tests-dexterity" ion-button color="primary" on-click="dexterityTest()">
+    <button id="tests-dexterity" ion-button color="primary" on-click="openTestModel('dexterity')">
       DX
     </button>
-    <button id="tests-intelligence" ion-button color="primary" on-click="intelligenceTest()">
+    <button id="tests-intelligence" ion-button color="primary" on-click="openTestModel('intelligence')">
       IQ
     </button>
-    <button id="tests-health" ion-button color="primary" on-click="healthTest()">
+    <button id="tests-health" ion-button color="primary" on-click="openTestModel('health')">
       HT
     </button>
   </ion-list>
   <!-- Offensive moves tests -->
   <ion-list text-center>
-    <button id="tests-perception" ion-button color="primary" on-click="perceptionTest()">
+    <button id="tests-perception" ion-button color="primary" on-click="openTestModel('perception')">
       Perception
     </button>
-    <button id="tests-will" ion-button color="primary" on-click="willTest()">
+    <button id="tests-will" ion-button color="primary" on-click="openTestModel('will')">
       Will
     </button>
-    <button id="tests-attack" ion-button color="primary" on-click="attackTest()">
+    <button id="tests-attack" ion-button color="primary" on-click="openTestModel('attack')">
       Attack
     </button>
   </ion-list>
   <!-- Evasive moves tests -->
   <ion-list text-center>
-    <button id="tests-dodge" ion-button color="primary" on-click="dodgeTest()">
+    <button id="tests-dodge" ion-button color="primary" on-click="openTestModel('dodge')">
       Dodge
     </button>
-    <button id="tests-parry" ion-button color="primary" on-click="parryTest()">
+    <button id="tests-parry" ion-button color="primary" on-click="openTestModel('parry')">
       Parry
     </button>
-    <button id="tests-block" ion-button color="primary" on-click="blockTest()">
+    <button id="tests-block" ion-button color="primary" on-click="openTestModel('block')">
       Block
     </button>
   </ion-list>
