--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -17,9 +17,9 @@
 </ion-header>
 <ion-content padding id="status-page">
   <ion-list id="primary-status-list">
-    <ion-item color="none" id="status-strenght">
-      Strenght (ST)
-      <ion-note item-right>{{char.strenght}}</ion-note>
+    <ion-item color="none" id="status-strength">
+      Strength (ST)
+      <ion-note item-right>{{char.strength}}</ion-note>
     </ion-item>
     <ion-item color="none" id="status-dexterity">
       Dexterity (DX)
