--- a/src/pages/character-resume/character-resume.html
+++ b/src/pages/character-resume/character-resume.html
@@ -43,8 +43,8 @@
       </ion-item>
       <ion-item style="text-align:center">Character Status</ion-item>
       <ion-item color="none">
-        Strenght (ST):
-        <ion-note>{{new_char.strenght}}</ion-note>
+        Strength (ST):
+        <ion-note>{{new_char.strength}}</ion-note>
       </ion-item>
       <ion-item color="none">
         Dexterity (DX):
