--- a/src/pages/tests/tests.html
+++ b/src/pages/tests/tests.html
@@ -56,7 +56,7 @@
   </ion-list>
   <!-- Status tests -->
   <ion-list text-center>
-    <button id="tests-strenght" ion-button color="primary" on-click="openTestModel('strenght')">
+    <button id="tests-strength" ion-button color="primary" on-click="openTestModel('strength')">
       ST
     </button>
     <button id="tests-dexterity" ion-button color="primary" on-click="openTestModel('dexterity')">
