--- a/src/pages/modal-test/modal-test.html
+++ b/src/pages/modal-test/modal-test.html
@@ -59,10 +59,24 @@
                 </button>
             </ion-note>
         </ion-item>
-        <ion-item id="end_value" style="font-size:250% !important">
-            Test Final Value
-            <ion-note item-right style="color:black">{{testBasicValue+testEquipmentValue+testModValue}}</ion-note>
-        </ion-item>
+        <ion-list *ngIf='testName=="attack"||testName=="dodge"||testName=="parry"||testName=="block";else testNameElse'>
+            <ion-item id="left_hand_end_value" style="font-size:250% !important">
+                Left Hand Final Value
+                <ion-note item-right style="color:black">{{testBasicValue+testEquipmentValue+testModValue}}</ion-note>
+            </ion-item>
+            <ion-item id="right_hand_end_value" style="font-size:250% !important">
+                Right Hand Final Value
+                <ion-note item-right style="color:black">{{testBasicValue+testEquipmentValue+testModValue}}</ion-note>
+            </ion-item>
+        </ion-list>
+        <ng-template #testNameElse>
+            <ion-list>
+                <ion-item id="end_value" style="font-size:250% !important">
+                    Test Final Value
+                    <ion-note item-right style="color:black">{{testBasicValue+testEquipmentValue+testModValue}}</ion-note>
+                </ion-item>
+            </ion-list>
+        </ng-template>
     </ion-list>
 </div>
 
