--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -153,20 +153,25 @@
     </ion-item>
   </ion-item-group>
   <form id="characterResume-form">
-    <ion-grid>
+    <ion-grid style="font-size:8">
       <ion-row>
-        <ion-col col-4>
+        <ion-col col-3>
           <button id="buy-item-button" full ion-button color="secondary" on-click="openBuyItemModal()">
             Buy Item/Equipment
           </button>
         </ion-col>
-        <ion-col col-4>
+        <ion-col col-3>
           <button id="add-item-button" full ion-button color="secondary" on-click="openAddItemModal()">
             Add Item/Equipment
           </button>
         </ion-col>
-        <ion-col col-4>
+        <ion-col col-3>
           <button id="add-new-item-button" full ion-button color="secondary" on-click="openAddNewItemModal()">
+            Add New Item
+          </button>
+        </ion-col>
+        <ion-col col-3>
+          <button id="add-resource-button" full ion-button color="secondary" on-click="openAddResourceModal()">
             Add New Item
           </button>
         </ion-col>
